force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/vlocity_cmt__CalculationMatrixVersion__c.object-meta.xml
<CustomObject>
    <label>Vlocity Calculation Matrix Version</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>