force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/fields/vlocity_cmt__GroupKeyValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__GroupKeyValue__c</fullName>
    <externalId>true</externalId>
    <label>Group Key Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>