force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/fields/vlocity_cmt__MatrixRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MatrixRecordType__c</fullName>
    <formula>vlocity_cmt__CalculationMatrixId__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matrix Record Type</label>
    <type>Text</type>
</CustomField>