force-app/main/default/objects/vlocity_cmt__CalculationMatrixVersion__c/fields/vlocity_cmt__SubGroupKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SubGroupKey__c</fullName>
    <formula>vlocity_cmt__CalculationMatrixId__r.vlocity_cmt__SubGroupKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Group Key</label>
    <type>Text</type>
</CustomField>